--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="PCC коуч для руководителей. Обретите спокойную уверенность и способность принимать решения без внутреннего хаоса." />
     <title>Коучинг для руководителей — PCC Coach</title>
-    <meta property="og:image" content="https://bolt.new/static/og_default.png">
+    <meta property="og:image" content="public/preview.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
+    <meta name="twitter:image" content="public/preview.png">
 </head>
   <body>
     <div id="root"></div>
