--- a/index.html
+++ b/index.html
@@ -1,17 +1,48 @@
-<!doctype html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="PCC коуч для руководителей. Обретите спокойную уверенность и способность принимать решения без внутреннего хаоса." />
-    <title>Коучинг для руководителей — PCC Coach</title>
-    <meta property="og:image" content="public/preview.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="public/preview.png">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Title (вкладка браузера, SEO) -->
+  <title>Коучинг для руководителей — Павел Пронин, PCC</title>
+
+  <!-- Description -->
+  <meta
+    name="description"
+    content="PCC коуч для руководителей. Помогаю вернуть ясность, устойчивость и способность принимать решения без внутреннего хаоса."
+  />
+
+  <!-- Open Graph (Telegram, Facebook, etc.) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://pronin-coach.netlify.app/" />
+  <meta
+    property="og:title"
+    content="Спокойные решения без внутреннего хаоса — коучинг для руководителей"
+  />
+  <meta
+    property="og:description"
+    content="Индивидуальный коучинг для руководителей под давлением. Ясность, устойчивость, управляемость."
+  />
+  <meta
+    property="og:image"
+    content="https://pronin-coach.netlify.app/preview.png"
+  />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <!-- Twitter / X -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta
+    name="twitter:title"
+    content="Спокойные решения без внутреннего хаоса — коучинг для руководителей"
+  />
+  <meta
+    name="twitter:description"
+    content="Индивидуальный коучинг для руководителей под давлением. Ясность, устойчивость, управляемость."
+  />
+  <meta
+    name="twitter:image"
+    content="https://pronin-coach.netlify.app/preview.png"
+  />
+
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
 </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
