--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Коучинг для руководителей — Павел Пронин, PCC</title>
+    <title>Коучинг для руководителей — Павел Пронин</title>
     <meta name="description" content="PCC коуч для руководителей. Помогаю вернуть ясность, устойчивость и способность принимать решения без внутреннего хаоса." />
 
     <meta property="og:type" content="website" />
